//version of buffer to use
syntax = "proto3";

//give a number of options 
option java_multiple_files = true;
option java_package = "com.michaelbutler.grpc.report";
option java_outer_classname = "ReportServiceImpl";

package com.michaelbutler.grpc.report;

service reportService{
	
	//specify the RPC
	//check balance, add funds, withdraw funds
	rpc fullReportList(fullReportListRequest) returns (fullReportListReply){}
	rpc addReportList(addReportListRequest) returns (addReportListReply){}
	rpc withdrawReportList(withdrawReportListRequest) returns (withdrawReportListReply){}
	
}

//specify messages used from RPC

message fullReportListRequest{

	 string report = 1; 
	

}

message fullReportListReply{

	 string rReport = 1;

}

message addReportListRequest{

	string report = 1;

}

message addReportListReply{

	string rReport = 1;

}

message withdrawReportListRequest{

	string report = 1;

}

message withdrawReportListReply{

	string rReport = 1;

}